<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título da página -->
    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="24dp"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Campo de Email -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="#757575" />

    <!-- Campo de Senha -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@android:drawable/editbox_background"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:padding="12dp" />

    <!-- Botão de Login -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@android:color/holo_blue_light"
        android:padding="12dp"
        android:text="@string/entrar"
        android:textColor="#4E342E" />

    <!-- Link para cadastro -->
    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/sem_cadastro_cadastre_se_aqui"
        android:textColor="#0277BD"
        android:textSize="14sp" />

</LinearLayout>
