<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StudentsListFragment">

    <!-- Layout superior com botões -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:layout_gravity="top">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@null"
            android:contentDescription="@string/return_button"
            app:srcCompat="@drawable/return_button" />

        <TextView
            android:id="@+id/student_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/student_list"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@null"
            android:contentDescription="@string/add_button"
            app:srcCompat="@drawable/add_icon" />
    </LinearLayout>

    <!-- Campo de busca -->
    <EditText
        android:id="@+id/buscar_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:inputType="text"
        android:drawableStart="@drawable/search"
        android:drawablePadding="8dp"
        android:hint="@string/name" />

    <!-- Lista de estudantes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_alunos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:paddingHorizontal="16dp"
        tools:listitem="@layout/card_aluno" />
</FrameLayout>
