<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/return_button_sign_up_professor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_button_sign_up_professor" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <!-- Nome Completo -->
        <TextView
            android:id="@+id/full_name_sign_up_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_sign_up"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/full_name_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:hint="@string/full_name_sign_up"
            android:inputType="text"
            android:textSize="16sp" />

        <!-- Disciplina -->
        <TextView
            android:id="@+id/discipline_sign_up_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discipline_sign_up"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/subject_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/book_check"
            android:drawablePadding="8dp"
            android:hint="@string/discipline_sign_up"
            android:inputType="text"
            android:textSize="16sp" />

        <!-- Celular -->
        <TextView
            android:id="@+id/phone_sign_up_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_sign_up"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/phone_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="8dp"
            android:hint="@string/phone_sign_up"
            android:inputType="phone"
            android:textSize="16sp" />

        <!-- E-mail -->
        <TextView
            android:id="@+id/email_sign_up_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/email_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <!-- Senha -->
        <TextView
            android:id="@+id/password_sign_up_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/password_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="8dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:textSize="16sp" />

        <!-- Confirmar Senha -->
        <TextView
            android:id="@+id/confirm_password_sign_up_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_senha"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/confirm_passowrd_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lock_keyhole"
            android:drawablePadding="8dp"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button_aluno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button_aluno">

        <TextView
            android:id="@+id/ja_possui_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ja_cadastrado" />

        <TextView
            android:id="@+id/already_registered_sign_up_professor_button"
            android:layout_marginStart="4sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/acesse_aqui"
            android:textColor="@color/custom_blue"
            android:fontFamily="@font/poppins_semibold"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
