<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/return_button_sign_up_student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/return_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_student"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/return_button_sign_up_student" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignUp">

        <!-- Nome Completo -->
        <TextView
            android:id="@+id/full_name_sign_up_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_sign_up"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/full_name_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/user"
            android:drawablePadding="8dp"
            android:hint="@string/full_name_sign_up"
            android:inputType="text"
            android:textSize="16sp" />

        <!-- Nível de Ensino -->
        <TextView
            android:id="@+id/education_level_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education_level"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/editTextEducationLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/book_check"
            android:drawablePadding="8dp"
            android:hint="@string/education_level"
            android:inputType="text"
            android:textSize="16sp" />

        <!-- Celular -->
        <TextView
            android:id="@+id/phone_sign_up_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_sign_up"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/phone_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="8dp"
            android:hint="@string/phone_sign_up"
            android:inputType="phone"
            android:textSize="16sp" />

        <!-- E-mail -->
        <TextView
            android:id="@+id/email_sign_up_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/email_professor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp" />

        <!-- Data de Nascimento -->
        <TextView
            android:id="@+id/birth_date_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/editTextBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/calendar_days"
            android:drawablePadding="8dp"
            android:hint="@string/birth_date"
            android:inputType="date"
            android:textSize="16sp" />

        <!-- CPF -->
        <TextView
            android:id="@+id/cpf_sign_up_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cpf"
            android:textColor="@color/custom_gray" />

        <EditText
            android:id="@+id/editTextCPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/id_card"
            android:drawablePadding="8dp"
            android:hint="@string/cpf"
            android:inputType="number"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_up_button_professor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up_button"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>
